<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".view.AddFoodActivity"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_food_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Food Name" />

        <EditText
            android:id="@+id/add_food_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/add_food_price_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Food Price" />

        <EditText
            android:id="@+id/add_food_price_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/add_food_description_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Food Description" />

        <EditText
            android:id="@+id/add_food_description_et"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:ems="10"
            android:inputType="text"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Food Image"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_food_image_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose File" />

            <ImageView
                android:id="@+id/add_food_image_iv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <TextView
            android:id="@+id/add_food_image_path_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />

        <ProgressBar
            android:id="@+id/add_food_ProgressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/add_food_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Food" />
    </LinearLayout>


</LinearLayout>

</android.support.constraint.ConstraintLayout>