<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddRestaurantActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_restaurant_nameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Name" />

            <EditText
                android:id="@+id/add_restaurant_nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Restaurant Name"
                android:inputType="text" />

            <TextView
                android:id="@+id/add_restaurant_typeTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Type" />

            <EditText
                android:id="@+id/add_restaurant_typeET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Type"
                android:inputType="text" />

            <TextView
                android:id="@+id/add_restaurant_countryTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Country" />

            <EditText
                android:id="@+id/add_restaurant_countryET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Country"
                android:inputType="text" />

            <TextView
                android:id="@+id/add_restaurant_addressTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Address" />

            <EditText
                android:id="@+id/add_restaurant_addressET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Address"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/add_restaurant_statusTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Status" />

            <EditText
                android:id="@+id/add_restaurant_statusET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Status"
                android:inputType="text" />

            <TextView
                android:id="@+id/add_restaurant_imageTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/add_restaurant_imageBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Choose File" />

                <ImageView
                    android:id="@+id/add_restaurant_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <TextView
                android:id="@+id/add_restaurant_path_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <ProgressBar
                android:id="@+id/add_restaurant_ProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/add_restaurantBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Submit" />
        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>